Some JSVM coverage reports have functions with wrong names (all "top-level")
Categories
(Core :: JavaScript Engine, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox72 | --- | wontfix |
| firefox73 | --- | wontfix |
| firefox74 | --- | fixed |
People
(Reporter: nchevobbe, Assigned: tcampbell)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
See https://phabricator.services.mozilla.com/D53962#1640472
The ConsoleTable component is tested through devtools/client/webconsole/test/browser/browser_webconsole_console_table.js
Comment 1•5 years ago
|
||
The priority flag is not set for this bug.
:Sylvestre, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 2•5 years ago
|
||
Marco,
Could you please have a look to this and set the right priority?
Comment 3•5 years ago
|
||
It looks like it is covered now: https://coverage.moz.tools/#revision=latest&path=devtools%2Fclient%2Fwebconsole%2Fcomponents%2FOutput%2FConsoleTable.js&view=file.
Maybe there was some intermittent issue that caused it not to be covered in that test run.
Comment 4•5 years ago
|
||
Actually, it is still in the zero coverage report, even though some functions are covered. I'll investigate.
Comment 5•5 years ago
•
|
||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
This is likely a problem related to this function:
https://searchfox.org/mozilla-central/rev/c61720a7d0c094d772059f9d6a7844eb7619f107/js/src/vm/CodeCoverage.cpp#519-531
Ted can you have a look?
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
This is a regression from Bug 1585372. I had moved the name capturing from finalization to script creation, but functions don't always have their name initialized yet. This means that cases like var x = function() {}; no longer work properly. I'll see what I can do.
Updated•5 years ago
|
| Assignee | ||
Comment 8•5 years ago
|
||
The intermittency is due off-thread parse and main-thread parse capturing the name at different times. I'll fix the frontend to be more consistent here.
I also opened Bug 1606960 to close the testing gap between what the jit-tests test and the browser case. Hopefully we can avoid more regressions and improve the reliability of the coverage data.
| Assignee | ||
Comment 9•5 years ago
|
||
Move the parser's calls to setFunName to before generating the actual script
for the function. This allows code-coverage to save the correct initial
function names when they are inferred. Off-thread parsing defers computing
the coverage metadata so it already has the right result.
Depends on D58668
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
| bugherder | ||
Comment 12•5 years ago
|
||
Is this something we should consider uplifting to Beta for Fx73? Please nominate if so.
| Assignee | ||
Comment 13•5 years ago
|
||
This is primarily for our own devs so I don't think we should uplift. The patch does have some small risk too.
Updated•3 years ago
|
Description
•