Bug 1597997 - Initialize inferred function name before script. r=jorendorff

Move the parser's calls to setFunName to before generating the actual script
for the function. This allows code-coverage to save the correct initial
function names when they are inferred. Off-thread parsing defers computing
the coverage metadata so it already has the right result.

Differential Revision: https://phabricator.services.mozilla.com/D58669

--HG--
extra : moz-landing-system : lando