js/src/jit-test/tests/coverage/simple.js
@@ -574,5 +574,23 @@ checkLcov(function () { //FN:$,top-level //FNDA:1,%
     });
 }
 
+// These tests are not included in ../debug/Script-getOffsetsCoverage-01.js
+// because they are testing behaviour of --code-coverage.
+{
+  // Test function names
+  checkLcov(function () {
+    //FN:1,top-level
+    //FNDA:1,top-level
+
+    var x = function() {};  //FN:$,x
+    let y = function() {};  //FN:$,y
+
+    let z = {
+      z_method() { },       //FN:$,z_method
+      get z_prop() { },     //FN:$,get z_prop
+    }
+  });
+}
+
 // If you add a test case here, do the same in
 // jit-test/tests/debug/Script-getOffsetsCoverage-01.js
